# 2022hackathon

plant/: plant.guiguider
plant/sdk/Core/component/lists/: component_lists_MIMXRT1062.cmake
plant/sdk/Core/component/serial_manager/: component_serial_manager_MIMXRT1062.cmake  component_serial_manager_uart_MIMXRT1062.cmake
plant/sdk/Core/component/silicon_id/: component_silicon_id_MIMXRT1062.cmake
plant/sdk/Core/component/uart/: component_lpuart_adapter_MIMXRT1062.cmake
plant/sdk/Core/device/: device_MIMXRT1062_CMSIS_MIMXRT1062.cmake  device_MIMXRT1062_system_MIMXRT1062.cmake
plant/sdk/Core/doc/: readme.txt
plant/sdk/Core/drivers/: driver_cache_armv7_m7_MIMXRT1062.cmake  driver_clock_MIMXRT1062.cmake  driver_common_MIMXRT1062.cmake  driver_elcdif_MIMXRT1062.cmake  driver_igpio_MIMXRT1062.cmake  driver_iomuxc_MIMXRT1062.cmake  driver_lpi2c_MIMXRT1062.cmake  driver_lpuart_MIMXRT1062.cmake  driver_pxp_MIMXRT1062.cmake
plant/sdk/Core/freertos/freertos_kernel/: middleware_freertos-kernel_MIMXRT1062.cmake  middleware_freertos-kernel_heap_4_MIMXRT1062.cmake
plant/sdk/Core/lvgl/: middleware_lvgl_MIMXRT1062.cmake
plant/sdk/Core/touchpanel/: driver_ft5406_rt_MIMXRT1062.cmake  driver_gt911_MIMXRT1062.cmake
plant/sdk/Core/utilities/: utility_assert_MIMXRT1062.cmake  utility_debug_console_MIMXRT1062.cmake
plant/sdk/Core/video/: driver_video-common_MIMXRT1062.cmake
plant/sdk/Core/xip/: driver_xip_board_evkmimxrt1060_MIMXRT1062.cmake  driver_xip_device_MIMXRT1062.cmake
plant/sdk/armgcc/: CMakeLists.txt  flags.cmake
plant/sdk/armgcc/startup/: device_MIMXRT1062_startup_MIMXRT1062.cmake
plant/sdk/iar/: lvgl_guider.ewd  lvgl_guider.ewp  lvgl_guider_ewp.template
plant/sdk/iar/deployment/: lvgl_guider.flexspi_nor_sdram_release.driver.xcl  lvgl_guider.flexspi_nor_sdram_release.general.xcl
plant/sdk/mcuxpresso/: .cproject  .cproject_advanced_widgets  .project  .project_template
plant/sdk/mcuxpresso/Debug/: evkmimxrt1060_lvgl_guider_v8.map  evkmimxrt1060_lvgl_guider_v8_Debug.ld  evkmimxrt1060_lvgl_guider_v8_Debug_library.ld  evkmimxrt1060_lvgl_guider_v8_Debug_memory.ld  makefile  sources.mk
plant/sdk/mcuxpresso/Debug/board/: board.d  board.su  clock_config.d  clock_config.su  dcd.d  lvgl_support.d  lvgl_support.su  pin_mux.d  pin_mux.su  subdir.mk
plant/sdk/mcuxpresso/Debug/component/lists/: fsl_component_generic_list.d  fsl_component_generic_list.su  subdir.mk
plant/sdk/mcuxpresso/Debug/component/serial_manager/: fsl_component_serial_manager.d  fsl_component_serial_manager.su  fsl_component_serial_port_uart.d  fsl_component_serial_port_uart.su  subdir.mk
plant/sdk/mcuxpresso/Debug/component/silicon_id/: fsl_silicon_id.d  fsl_silicon_id.su  subdir.mk
plant/sdk/mcuxpresso/Debug/component/uart/: fsl_adapter_lpuart.d  fsl_adapter_lpuart.su  subdir.mk
plant/sdk/mcuxpresso/Debug/custom/: custom.d  custom.su  subdir.mk
plant/sdk/mcuxpresso/Debug/device/: subdir.mk  system_MIMXRT1062.d  system_MIMXRT1062.su
plant/sdk/mcuxpresso/Debug/drivers/: fsl_cache.d  fsl_cache.su  fsl_clock.d  fsl_clock.su  fsl_common.d  fsl_common.su  fsl_common_arm.d  fsl_common_arm.su  fsl_elcdif.d  fsl_elcdif.su  fsl_gpio.d  fsl_gpio.su  fsl_lpi2c.d  fsl_lpi2c.su  fsl_lpuart.d  fsl_lpuart.su  fsl_pxp.d  fsl_pxp.su  subdir.mk
plant/sdk/mcuxpresso/Debug/freertos/freertos_kernel/: croutine.d  event_groups.d  event_groups.su  list.d  list.su  queue.d  queue.su  stream_buffer.d  stream_buffer.su  subdir.mk  tasks.d  tasks.su  timers.d  timers.su
plant/sdk/mcuxpresso/Debug/freertos/freertos_kernel/portable/MemMang/: heap_4.d  heap_4.su  subdir.mk
plant/sdk/mcuxpresso/Debug/lvgl/lvgl/src/core/: lv_disp.d  lv_disp.su  lv_event.d  lv_event.su  lv_group.d  lv_group.su  lv_indev.d  lv_indev.su  lv_indev_scroll.d  lv_indev_scroll.su  lv_obj.d  lv_obj.su  lv_obj_class.d  lv_obj_draw.d  (+17 more)
plant/sdk/mcuxpresso/Debug/source/: lvgl_guider.d  lvgl_guider.su  subdir.mk
plant/sdk/mcuxpresso/Debug/startup/: startup_mimxrt1062.d  subdir.mk
plant/sdk/mcuxpresso/Debug/touchpanel/: fsl_ft5406_rt.d  fsl_ft5406_rt.su  fsl_gt911.d  fsl_gt911.su  subdir.mk
plant/sdk/mcuxpresso/Debug/utilities/: fsl_assert.d  fsl_assert.su  fsl_debug_console.d  fsl_debug_console.su  fsl_str.d  fsl_str.su  subdir.mk
plant/sdk/mcuxpresso/Debug/video/: fsl_video_common.d  fsl_video_common.su  subdir.mk
plant/sdk/mcuxpresso/Debug/xip/: evkmimxrt1060_flexspi_nor_config.d  fsl_flexspi_nor_boot.d  subdir.mk
plant/sdk/mdk/: lvgl_guider.uvoptx  lvgl_guider.uvprojx  lvgl_guider_uvprojx.template
(+303 files in other folders)
